# in-context-recall

./: .gitignore  README.md  losses.py  memory_module.py  new_mem_module.py  notebook.ipynb  notebook2.ipynb  pyproject.toml  synthetic_datasets.py
.ignore/: VAR_generator.py  gpu_monitor.ipynb  note4.ipynb  notebook2.ipynb
configs/: note6_example.yaml
notebooks/: eval_note.ipynb  train_note.ipynb
src/: configuration.py  eval.py  eval_note.ipynb  evaluate.py  evaluate2.py  evaluate_functions.py  forward_loop.py  func_memory_module.py  gpu_monitor.ipynb  linear_RNN.py  losses.py  memory_module.py  meta_optimizers.py  meta_training.py  model_components.py  new_mem_module.py  new_note.ipynb  note3.ipynb  note3b.ipynb  note4.ipynb  note5.ipynb  note6.ipynb  notebook.ipynb  notebook2.ipynb  sequence_functions.py  synthetic_datasets.py  temp.py  utils.py
src/experiments/: __init__.py  note6_runner.py
src/meta_training/: __init__.py  artifacts.py  batch.py  config.py  evaluation.py  models.py  optimizers.py  training.py
src/scripts/: run_note6_eval.py
tests/: test_evaluate.py  test_forward_loop.py  test_metaoptimizers.py
