[project]
name = "new-icr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0.0",
    "ipywidgets>=7.0.0",
    "matplotlib>=3.5.0",
    "nvidia-ml-py>=11.0.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "transformers>=4.0.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]
