[project]
name = "in-context-recall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "ipykernel~=7.1.0",
    "matplotlib~=3.10.7",
    "torch~=2.9.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
]

[tool.flake8]
exclude = [".venv", "__pycache__", ".git", "build", "dist"]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["override"]
